2004-04-24  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/windns.h (DNSREC_QUESTION, DNSREC_ANSWER, DNSREC_AUTHORITY,
	DNSREC_ADDITIONAL): Add defines.

2004-04-23  Robert Wruck  <wruck@tweerlei.de>

	* include/commctrl.h (LPNMLVDISPINFO): Add defines.

2004-04-23  Robert Wruck  <wruck@tweerlei.de>

	* include/aclui.h: New file.
	* lib/aclui.def: New file.
	* lib/test.c: Add aclui.h to includes.

2004-04-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (SPI_GETACTIVEWINDOWTRACKING,
	SPI_GETACTIVEWNDTRKZORDER, SPI_SETACTIVEWINDOWTRACKING,
	SPI_SETACTIVEWNDTRKZORDER): Remove duplicate defines.

2004-04-20  Christopher Faylor  <cgf@alum.bu.edu>

	* include/wingdi.h: Protect non-unicode case of below.

2004-04-20  Christopher Faylor  <cgf@alum.bu.edu>

	* include/wingdi.h: Protect use of ENUMLOGFONTEXDV, PENUMLOGFONTEXDV,
	LPENUMLOGFONTEXDV with appropriate version check.

2004-04-18  Hans Leidekker  <hans@it.vu.nl>

	* lib/directx/dxguid.c (CLSID_DirectSoundPrivate,
	DSPROPSETID_DirectSoundDevice): Add defines.

2004-04-20  Adrian Sandor  <aditsu@users.sourceforge.net>

	* include/msacm.h: New file.

2004-01-09  Stuart Cunningham  <stuart_hc@users.sourceforge.net>

	* include/objbase.h (STGFMT): Declare enum.
	(STGOPTIONS): Declare structure.
	(StgCreateStorageEx, StgOpenStorageEx): Declare.
	(STGOPTIONS_VERSION): Define.
	* lib/ole32.def (StgCreateStorageEx, StgOpenStorageEx): Add stubs.

2004-04-13  Filip Navara  <xnavara@volny.cz>

	* include/winuser.h (IS_INTRESOURCE, MB_CANCELTRYCONTINUE,
	WM_NCXBUTTONDOWN, WM_NCXBUTTONUP, WM_NCXBUTTONDBLCLK,
	WM_XBUTTONDOWN, WM_XBUTTONUP, WM_XBUTTONDBLCLK,
	DCX_INTERSECTUPDATE, MK_XBUTTON1, MK_XBUTTON2,
	HELP_SETWINPOS): Define.
	(WM_MOUSELAST): Different value for _WIN32_WINNT >= 0x0500.
	(SPI_*): Add new definitions for WINVER >= 0x500.
	(CallMsgFilter[AW], SetWindowsHookA): Correct prototype.
	(InternalGetWindowText, SetWindowsHookW): Declare.