@@ -1,3 +1,12 @@
+2004-04-24  Justin Forest  <vhex@users.sourceforge.net>
+
+	* include/winsock2.h (LUP_DEEP, LUP_CONTAINERS,
+	LUP_NOCONTAINERS, LUP_NEAREST, LUP_RETURN_NAME,
+	LUP_RETURN_TYPE, LUP_RETURN_VERSION, LUP_RETURN_COMMENT,
+	LUP_RETURN_ADDR, LUP_RETURN_BLOB, LUP_RETURN_ALIASES,
+	LUP_RETURN_QUERY_STRING, LUP_RETURN_ALL, LUP_RES_SERVICE,
+	LUP_FLUSHCACHE, LUP_FLUSHPREVIOUS): Add defines.
+
 2004-04-24  Luke Dunstan  <infidel@users.sourceforge.net>
 
 	* include/windns.h (DNSREC_QUESTION, DNSREC_ANSWER, DNSREC_AUTHORITY,
